Installs sphynx and stops installaing nose on Travis.
sphinx is needed to build the docs:
https://www.travis-ci.org/garybernhardt/expecter/jobs/4639483/#L31

nose is preinstalled.
http://about.travis-ci.org/docs/user/languages/python/#Pre-installed-packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 3.2
   - 3.3
 install:
-  - pip install --use-mirrors nose
+  - pip install --use-mirrors sphinx
   - pip install --use-mirrors .
 script:
   - ./runtests.py
